--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -1,27 +1,27 @@
 <mat-sidenav-container class="sidenav-container">
-<!--    <mat-sidenav #drawer class="sidenav" mode="side" opened fixedInViewport-->
-<!--                 [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"-->
-<!--    >-->
-<!--        <mat-toolbar>-->
-<!--            <a href="#" class="logo"> Menu-->
-<!--                <img src="https://via.placeholder.com/50">-->
-<!--            </a>-->
-<!--        </mat-toolbar>-->
-<!--        <mat-nav-list class="nav-list">-->
-<!--            <a mat-list-item href="#">Notifications-->
-<!--                <mat-icon>notifications</mat-icon>-->
-<!--            </a>-->
-<!--            <a mat-list-item href="#">Saved-->
-<!--                <mat-icon>bookmark</mat-icon>-->
-<!--            </a>-->
-<!--            <a mat-list-item routerLink="/profile">Profile-->
-<!--                <mat-icon>account_circle</mat-icon>-->
-<!--            </a>-->
-<!--            <a mat-list-item href="#">Log out-->
-<!--                <mat-icon>exit_to_app</mat-icon>-->
-<!--            </a>-->
-<!--        </mat-nav-list>-->
-<!--    </mat-sidenav>-->
+    <mat-sidenav #drawer class="sidenav" mode="side" opened fixedInViewport
+                 [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    >
+        <mat-toolbar>
+            <a href="#" class="logo"> Menu
+                <img src="https://via.placeholder.com/50">
+            </a>
+        </mat-toolbar>
+        <mat-nav-list class="nav-list">
+            <a mat-list-item href="#">Notifications
+                <mat-icon>notifications</mat-icon>
+            </a>
+            <a mat-list-item href="#">Saved
+                <mat-icon>bookmark</mat-icon>
+            </a>
+            <a mat-list-item routerLink="/profile">Profile
+                <mat-icon>account_circle</mat-icon>
+            </a>
+            <a mat-list-item (click)="onLogout()">Log out
+                <mat-icon>exit_to_app</mat-icon>
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
 
 <!--    <mat-sidenav-content>-->
         <!--        <mat-toolbar color="primary">-->
