--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -6,38 +6,17 @@
     <div class="landing-right-absolute">
         <div class="landing-right">
             <img src="https://via.placeholder.com/50" alt="logo">
-            <div class="form-wrapper">
-                <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
-                    <mat-form-field appearance="outline">
-                        <mat-label>First name</mat-label>
-                        <input matInput placeholder="First name" formControlName="firstName">
-                    </mat-form-field>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Last name</mat-label>
-                        <input matInput placeholder="Last name" formControlName="lastName">
-                    </mat-form-field>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Email</mat-label>
-                        <input matInput placeholder="Email" formControlName="email">
-                    </mat-form-field>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Password</mat-label>
-                        <input matInput placeholder="Password" formControlName="password" type="password">
-                    </mat-form-field>
-                    <!--                    <mat-form-field appearance="fill">-->
-                    <!--                        <mat-label></mat-label>-->
-                    <!--                        &lt;!&ndash;                        <mat-select>&ndash;&gt;-->
-                    <!--                        &lt;!&ndash;                            <mat-option *ngFor="let  of " [value]=".value">&ndash;&gt;-->
-                    <!--                        &lt;!&ndash;                                {{.viewValue}}&ndash;&gt;-->
-                    <!--                        &lt;!&ndash;                            </mat-option>&ndash;&gt;-->
-                    <!--                        &lt;!&ndash;                        </mat-select>&ndash;&gt;-->
-                    <!--                    </mat-form-field>-->
-                    <div class="form-btn-wrapper">
-                        <button type="submit" mat-raised-button>Log in</button>
-                        <p>OR</p>
-                        <button type="submit" mat-raised-button color="accent">Sign up</button>
-                    </div>
-                </form>
+            <div class="welcome-messages-wrapper">
+                <div class="welcome-message">
+                    Welcome to *insert name here*
+                </div>
+                <div class="log-in-message">
+                    Log in to your account or sign up to be a part of this community
+                </div>
+            </div>
+            <div class="landing-btn-wrapper">
+                <button type="button" mat-raised-button color="accent" (click)="openDialog('login')">Log in</button>
+                <button type="button" mat-raised-button color="accent" (click)="openDialog('signup')">Sign up</button>
             </div>
         </div>
     </div>
