--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body {
     height: 100%;
 }
@@ -12,4 +10,26 @@ body {
 .mat-list-item-content {
     justify-content: flex-end;
     flex-direction: row-reverse !important;
+}
+
+.mat-dialog-container {
+    min-height: 400px !important;
+    border-radius: 30px !important;
+    width: 1000px !important;
+}
+// styles when invalid
+// mat-form-field - label color when invalid
+.mat-form-field.mat-form-field-invalid .mat-form-field-label {
+    color: red;
+}
+
+// mat-form-field - outline color when invalid
+.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
+    color: red;
+}
+
+// mat-form-field - caret color when invalid
+.mat-form-field-invalid .mat-input-element,
+.mat-warn .mat-input-element {
+    caret-color: red;
 }
