--- a/src/app/components/auth-dialog/auth-dialog.component.scss
+++ b/src/app/components/auth-dialog/auth-dialog.component.scss
@@ -1,9 +1,6 @@
-@font-face {
-    font-family: 'password';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://jsbin-user-assets.s3.amazonaws.com/rafaelcastrocouto/password.ttf);
-}
+@use "src/assets/styles/globalVars";
+
+
 
 .mat-dialog-title {
     text-align: center;
@@ -33,7 +30,7 @@
     }
 
     .access-code {
-        font-family: 'password', serif;
+        font-family: globalVars.$password-font-family;
     }
 }
 
@@ -52,8 +49,7 @@
 .mat-dialog-actions {
     .login-btn, .signup-btn {
         width: 70%;
-        //background: rgb(29, 161, 242);
-        background: #1A91DA;
+        background: globalVars.$primary-color;
         //border: 1px solid rgba(0, 0, 0, 0);
         border-radius: 35px;
         color: white;
@@ -64,7 +60,7 @@
     }
 
     .signup-btn {
-        background: #232323;
+        background: globalVars.$secondary-color;
     }
 }
 
