--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -1,3 +1,5 @@
+@use "src/assets/styles/globalVars";
+
 .landing {
     &-left {
         //background: url(src/assets/images/landing2.jpg);
@@ -30,7 +32,7 @@
         button {
             width: 70%;
             //background: rgb(29, 161, 242);
-            background: #1A91DA;
+            background: globalVars.$primary-color;
             //border: 1px solid rgba(0, 0, 0, 0);
             border-radius: 35px;
             color: white;
@@ -40,7 +42,7 @@
             max-width: 300px;
 
             &:last-child {
-                background: #232323;
+                background: globalVars.$secondary-color;
                 margin-top: 30px;
             }
         }
