--- a/src/app/components/new-post/new-post.component.scss
+++ b/src/app/components/new-post/new-post.component.scss
@@ -5,32 +5,18 @@
     height: 180px;
     background: white;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.15);
-    padding: 15px;
+    padding: 20px 25px;
     border-radius: 30px;
     margin-bottom: 60px;
 
     &-container {
         display: flex;
         height: 100%;
-
-        .profile-img-wrapper {
-            padding: 8px 0 0 8px;
-            margin-right: 24px;
-            display: inline-flex;
-
-
-            .profile-img {
-                width: 54px;
-                height: 54px;
-                border-radius: 50%;
-            }
-        }
     }
 
     &-wrapper {
         display: inline-flex;
         width: 100%;
-        padding-top: 8px;
     }
 
     &-form {
@@ -41,6 +27,7 @@
         background: globalVars.$gray-1;
         border-radius: 20px;
         padding: 10px;
+        width: 100%;
     }
 
     &-submit-btn {
