--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,23 +1,25 @@
+@use "src/assets/styles/globalVars";
+
 .home {
+    height: 100vh;
     padding: 30px;
     display: grid;
     grid-template-columns: 1fr 0.4fr;
 
     .post-card-item {
-        width: 550px;
-        height: 400px;
+        width: 650px;
         background: white;
         box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.15);
         padding: 20px 25px;
         border-radius: 30px;
-        margin-bottom: 15px;
+        margin-bottom: 2rem;
         min-height: 100px;
         display: flex;
         flex-direction: column;
 
         .image-and-details-wrapper {
             display: flex;
-            margin-bottom: 10px;
+            margin-bottom: 1rem;
         }
 
         .post {
@@ -41,7 +43,7 @@
                 height: 100%;
 
                 &-text {
-
+                    margin-bottom: 1rem;
                 }
 
                 .reactions-comments-wrapper {
@@ -74,17 +76,60 @@
                         }
                     }
 
-                    .comments {
-                        &-section {
-                            display: inline-flex;
-                        }
+                    .comments-btn {
+                        display: inline-flex;
+                        cursor: pointer;
+                        padding: 10px 12px;
+                        background-color: globalVars.$gray-1;
+                        border-radius: 4px;
 
-                        &-btn {
-                            cursor: pointer;
+                        .mat-icon {
+                            margin-right: 0.5rem;
                         }
                     }
+                }
+            }
+
+            &-comments {
+                border-top: 1px solid black;
+                margin-top: 2rem;
+                padding-top: 1.5rem;
+
+                .comment-container {
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    background-color: globalVars.$gray-2;
+                    border-radius: 20px;
+                    padding: 12px;
+                    word-break: break-word;
+                    margin-bottom: 1rem;
+                }
+
+                .new-comment {
+                    &-container {
+                        display: flex;
+
+                        .profile-img-wrapper {
+                            margin-left: 12px;
+                        }
+                    }
+
+                    &-field {
+                        width: 100%;
+                        line-height: normal;
+
+
+
+                        .characters-left {
+                            align-self: flex-end;
+                        }
+                    }
+
                 }
             }
         }
     }
 }
+
+
