--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -59,11 +59,38 @@ body {
     caret-color: red;
 }
 
+.mat-form-field-appearance-fill {
+    .mat-form-field-underline {
+        display: none;
+    }
+
+    .mat-form-field-flex {
+        border-radius: 20px !important;
+    }
+}
+
+.mat-form-field .mat-form-field-label-wrapper label {
+    line-height: 1rem;
+}
+
+.new-comment-field {
+    .mat-form-field-infix {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.mat-form-field.mat-focused {
+    .mat-form-field-label {
+        color: globalVars.$primary-color;
+    }
+}
+
 // [End] Mat-form-field
 
 // [Start] Profile image in cards
 .profile-img-wrapper {
-    margin-right: 24px;
+    margin-right: 20px;
     display: inline-flex;
 
     .profile-img {
@@ -74,3 +101,19 @@ body {
 }
 
 // [End] Profile image in cards
+
+//[Start] Others
+.full-width {
+    width: 100%;
+}
+
+.characters-left {
+    display: inline-flex;
+    font-size: 9px;
+}
+
+.no-characters-left {
+    color: globalVars.$color-invalid;
+}
+
+//[End] Others
