update comments top border color

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -91,7 +91,7 @@
             }
 
             &-comments {
-                border-top: 1px solid black;
+                border-top: 1px solid globalVars.$gray-3;
                 margin-top: 2rem;
                 padding-top: 1.5rem;
 
