switch to auth using angularfire

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-main-nav *ngIf="this.authService.user.value != null"></app-main-nav>
-<app-landing-page *ngIf="this.authService.user.value == null"></app-landing-page>
+<app-main-nav *ngIf="this.authService.isLoggedIn"></app-main-nav>
+<app-landing-page *ngIf="!this.authService.isLoggedIn"></app-landing-page>
