save comments in Firestore

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="post-card-item" *ngFor="let post of latestPosts$">
             <div class="image-and-details-wrapper">
                 <div class="profile-img-wrapper">
-                    <img class="profile-img" src="assets/images/placeholder-profile.jpg" alt="Profile Image">
+                    <img class="profile-img" [src]="post.userImageURL" alt="Profile Image">
                 </div>
                 <div class="post-details">
                     <div class="post-author">{{post.userFirstName}} {{post.userLastName}}</div>
@@ -46,7 +46,7 @@
                             <img class="profile-img" src="assets/images/placeholder-profile.jpg">
                         </div>
                     </div>
-                    <form [formGroup]="newCommentForm" class="new-post-form full-width">
+                    <form [formGroup]="newCommentForm" class="new-post-form full-width" (keyup.enter)="onSubmitComment(post.id)">
                         <mat-form-field class="new-comment-field" appearance="fill">
                             <mat-label>Say something nice about this post...</mat-label>
                             <textarea cdkTextareaAutosize
@@ -57,6 +57,7 @@
                                       rows="3"
                                       formControlName="newComment">
                             </textarea>
+                            <button class="btn-primary new-comment-btn" (click)="onSubmitComment(post.id)">Reply</button>
                         </mat-form-field>
                     </form>
                 </div>
