--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -119,11 +119,16 @@
                         width: 100%;
                         line-height: normal;
 
-
-
                         .characters-left {
                             align-self: flex-end;
                         }
+                    }
+
+                    &-btn {
+                        height: 37px;
+                        width: 70px;
+                        margin-left: auto;
+                        margin-top: 1em;
                     }
 
                 }
