new post adjustments

--- a/src/app/components/auth-dialog/auth-dialog.component.scss
+++ b/src/app/components/auth-dialog/auth-dialog.component.scss
@@ -30,7 +30,7 @@
     }
 
     .access-code {
-        font-family: globalVars.$password-font-family;
+        font-family: globalVars.$password-font-family !important;
     }
 }
 
