--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -102,6 +102,19 @@ body {
 
 // [End] Profile image in cards
 
+//[Start] Buttons
+.btn-primary {
+    background-color: globalVars.$primary-color;
+    color: rgb(255, 255, 255);
+    outline-style: none;
+    font-weight: 700;
+    line-height: 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+//[End] Buttons
+
 //[Start] Others
 .full-width {
     width: 100%;
