save likes and dislikes

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -16,6 +16,7 @@
         min-height: 100px;
         display: flex;
         flex-direction: column;
+        word-break: break-all;
 
         .image-and-details-wrapper {
             display: flex;
