--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,8 +2,8 @@
     <div class="left">
         <app-new-post></app-new-post>
 
-        <div class="post-card-item" *ngFor="let post of latestPosts">
-            <div class="image-and-details-wrapper">
+        <div class="post-card-item" *ngFor="let post of latestPosts | async">
+            <div class="image-and-details-wrapper" >
                 <div class="profile-img-wrapper">
                     <img class="profile-img" [src]="post.userImageURL" alt="Profile Image">
                 </div>
@@ -22,19 +22,19 @@
                     <div class="reactions-wrapper">
                         <div class="likes-section">
                             <div class="number-of-likes">
-                                {{numberOfLikes}}
+                                {{post.numberOfLikes}}
                             </div>
-                            <mat-icon class="like-btn">thumb_up</mat-icon>
+                            <mat-icon class="like-btn" (click)="onReactionClick(post.id, 'likes')">thumb_up</mat-icon>
                         </div>
                         <div class="dislikes-section">
                             <div class="number-of-dislikes">
-                                {{numberOfDislikes}}
+                                {{post.numberOfDislikes}}
                             </div>
-                            <mat-icon class="dislike-btn">thumb_down</mat-icon>
+                            <mat-icon class="dislike-btn" (click)="onReactionClick(post.id, 'dislikes')">thumb_down</mat-icon>
                         </div>
                     </div>
                     <div class="comments-btn" (click)="showHideComments(post)">
-                        <mat-icon> comment</mat-icon>
+                        <mat-icon>comment</mat-icon>
                         Comments
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                 <div class="new-comment-container">
                     <div class="image-and-details-wrapper">
                         <div class="profile-img-wrapper">
-                            <img class="profile-img" [src]="userImageURL">
+                            <img class="profile-img" [src]="userImageURL" alt="Profile Image">
                         </div>
                     </div>
                     <form [formGroup]="newCommentForm" class="new-post-form full-width"
