--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,49 @@
-<p>profile works!</p>
+<div class="profile">
+    <div class="profile-left">
+        <button class="profile-btn btn-primary" (click)="toggleProfileEditing()">
+            {{isEditingMode ? 'Save your personal details' : 'Edit your personal details'}}
+        </button>
+        <form class="profile-form" [formGroup]="profileForm" [ngClass]="{'no-events' : !isEditingMode}">
+            <mat-form-field appearance="outline">
+                <mat-label>First name</mat-label>
+                <input matInput placeholder="First name" formControlName="firstName" autocomplete="given-name">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Last name</mat-label>
+                <input matInput placeholder="Last name" formControlName="lastName" autocomplete="family-name">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Date of birth</mat-label>
+                <input matInput [max]="today" [matDatepicker]="picker" formControlName="dob" autocomplete="bday">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Email address</mat-label>
+                <input matInput placeholder="Email" formControlName="email" type="email" email autocomplete="email">
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>University</mat-label>
+                <input type="text"
+                       placeholder="Type to search..."
+                       matInput
+                       formControlName="university"
+                       [matAutocomplete]="auto"
+                       autocomplete="disabled">
+                <mat-autocomplete #auto="matAutocomplete">
+                    <mat-option *ngFor="let university of filteredUniversities | async" [value]="university.name">
+                        {{university.name}}
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Access code</mat-label>
+                <input matInput formControlName="accessCode" type="text" class="access-code"
+                       autocomplete="one-time-code">
+            </mat-form-field>
+        </form>
+    </div>
+    <div class="profile-right">
+
+    </div>
+</div>
